--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,12 @@
 {
-  "botName": "Keji Cloud",
+  "botName": "✅aplin✅",
   "prefix": ".",
   "botpicture": "https://i.ibb.co/Xxmdjjfm/Flux-Dev-cinematic-keyframe13-anime-keyframe12-Animestyle-port-2.jpg",
   "ownerName": "Hridoy",
   "ownerUID": "61586897962846",
   "adminUIDs": [
     "61586897962846",
-    "admin_uid_2",
+    "61586897962846",
     "your_uid_here",
     "12"
   ],
