--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100060948524757%22%3A%22HnfLmWzt%22%2C%22100069518469405%22%3A%22QPHMajjx%22%7D",
+        "value": "%7B%22100060948524757%22%3A%22HnfLmWzt%22%2C%2261550095648862%22%3A%22VmuGcJgO%22%2C%22100069518469405%22%3A%22VzDcAy6M%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.594Z",
+        "lastAccessed": "2026-02-09T10:13:59.594Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "locale",
@@ -59,53 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x892",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61550095648862",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
-    },
-    {
-        "key": "xs",
-        "value": "14%3AmP1dmoUbmSEiPQ%3A2%3A1770456160%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
-    },
-    {
-        "key": "fr",
-        "value": "00r3XsjPxlLN0GH5v.AWdLYXL8oxrtG7gqM_-dcNrY2bTrL5ugXmEd4dxpE2o406ZwdcU.BpbfZF..AAA.0.0.BphwRk.AWfJ9jZxgDjefvu0GFCNPFZv4kM",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "pas",
@@ -113,25 +68,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "1.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
+    },
+    {
+        "key": "wd",
+        "value": "412x892",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61550095648862",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
+    },
+    {
+        "key": "xs",
+        "value": "9%3A8UdyVSqtZ4hqaQ%3A2%3A1770632021%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
+    },
+    {
+        "key": "fr",
+        "value": "00r3XsjPxlLN0GH5v.AWe5PCMPDg2zxmY_2lm8gvcquQ81GBkxyySvJIi-_6pxLpK3fUo.BpbfZF..AAA.0.0.BpibNY.AWfMFt1dl_oCXlv_vgt4yBrLThw",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "fbl_st",
-        "value": "100725648%3BT%3A29507602",
+        "value": "101228365%3BT%3A29510533",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3070%3Btimestamp%3A1770456165",
+        "value": "v2%3Bclient_version%3A3080%3Btimestamp%3A1770632024",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-07T09:23:08.043Z",
-        "lastAccessed": "2026-02-07T09:23:08.043Z"
+        "creation": "2026-02-09T10:13:59.595Z",
+        "lastAccessed": "2026-02-09T10:13:59.595Z"
     }
         ]
