--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "kenji-cloud"
   ],
   "dependencies": {
-    "axios": "^1.10.0",
+    "axios": "^1.13.5",
     "blessed": "^0.1.81",
     "canvas": "^2.11.2",
     "chalk": "^4.1.2",
     "colors": "^1.4.0",
-    "express": "^4.17.1",
-    "fca-priyansh": "latest",
-    "fs-extra": "^10.0.0",
-    "javascript-obfuscator": "^4.1.1",
-    "moment": "^2.29.1",
-    "mongodb": "^6.17.0",
+    "express": "^5.0.6",
+    "fca-priyansh": "^21.0.0",
+    "fs-extra": "^11.1.1",
+    "javascript-obfuscator": "^5.3.0",
+    "moment": "^2.30.1",
+    "mongodb": "^7.1.0",
     "yt-search": "^2.13.1"
   }
 }
