--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100060948524757%22%3A%22HnfLmWzt%22%2C%2261550095648862%22%3A%22VmuGcJgO%22%2C%22100069518469405%22%3A%22VzDcAy6M%22%7D",
+        "value": "%7B%22100060948524757%22%3A%22HnfLmWzt%22%2C%2261550095648862%22%3A%22xI8klYNb%22%2C%22100069518469405%22%3A%22VzDcAy6M%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.594Z",
-        "lastAccessed": "2026-02-09T10:13:59.594Z"
+        "creation": "2026-02-09T13:19:41.447Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "xs",
-        "value": "9%3A8UdyVSqtZ4hqaQ%3A2%3A1770632021%3A-1%3A-1",
+        "value": "10%3Az6XetTXFCNUYtw%3A2%3A1770643167%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "fr",
-        "value": "00r3XsjPxlLN0GH5v.AWe5PCMPDg2zxmY_2lm8gvcquQ81GBkxyySvJIi-_6pxLpK3fUo.BpbfZF..AAA.0.0.BpibNY.AWfMFt1dl_oCXlv_vgt4yBrLThw",
+        "value": "00r3XsjPxlLN0GH5v.AWfXFwXLmF1HyvPxLlY7hEQBZS4Tam1RnaxhwfYjc2VhQEiZYKs.BpbfZF..AAA.0.0.Bpid7i.AWeZrWUUd_3_wLTaCCEmtowv01k",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "fbl_st",
-        "value": "101228365%3BT%3A29510533",
+        "value": "100731666%3BT%3A29510719",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3080%3Btimestamp%3A1770632024",
+        "value": "v2%3Bclient_version%3A3080%3Btimestamp%3A1770643170",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T10:13:59.595Z",
-        "lastAccessed": "2026-02-09T10:13:59.595Z"
+        "creation": "2026-02-09T13:19:41.448Z",
+        "lastAccessed": "2026-02-09T13:19:41.448Z"
     }
         ]
