--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100060948524757%22%3A%22HnfLmWzt%22%2C%2261550095648862%22%3A%22xI8klYNb%22%2C%22100069518469405%22%3A%22VzDcAy6M%22%7D",
+        "value": "%7B%2261550095648862%22%3A%224dZqxTiK%22%2C%22100069518469405%22%3A%22VzDcAy6M%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.447Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.512Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "vpd",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
-    },
-    {
-        "key": "locale",
-        "value": "ar_AR",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "pas",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "wd",
@@ -86,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "c_user",
@@ -95,43 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "xs",
-        "value": "10%3Az6XetTXFCNUYtw%3A2%3A1770643167%3A-1%3A-1",
+        "value": "37%3ApspT6viAkU8JQA%3A2%3A1770649536%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "fr",
-        "value": "00r3XsjPxlLN0GH5v.AWfXFwXLmF1HyvPxLlY7hEQBZS4Tam1RnaxhwfYjc2VhQEiZYKs.BpbfZF..AAA.0.0.Bpid7i.AWeZrWUUd_3_wLTaCCEmtowv01k",
+        "value": "00r3XsjPxlLN0GH5v.AWeqh18SQcHcQL7NLCQ7lQmJ2uS2nvSqs6KXVEeXfZy0WiS6wo0.BpbfZF..AAA.0.0.BpiffD.AWci2Uk4j2zDFc8wnej45IKcpUM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
+    },
+    {
+        "key": "locale",
+        "value": "ar_AR",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "fbl_st",
-        "value": "100731666%3BT%3A29510719",
+        "value": "101215421%3BT%3A29510825",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3080%3Btimestamp%3A1770643170",
+        "value": "v2%3Bclient_version%3A3080%3Btimestamp%3A1770649539",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T13:19:41.448Z",
-        "lastAccessed": "2026-02-09T13:19:41.448Z"
+        "creation": "2026-02-09T15:05:49.513Z",
+        "lastAccessed": "2026-02-09T15:05:49.513Z"
     }
         ]
