--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.812Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "vpd",
@@ -50,17 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
-    },
-    {
-        "key": "pas",
-        "value": "100079668997780%3AIvPNFBEk0V%2C61552846361150%3A5WQchPQ3He%2C100060948524757%3AwTLFBYZQ79%2C100069518469405%3AfQajVGywcL%2C61550095648862%3AzIAhQkkV5b",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "locale",
@@ -68,70 +59,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "1.75",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
-    },
-    {
-        "key": "wd",
-        "value": "412x892",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.813Z",
-        "lastAccessed": "2026-02-09T20:22:55.813Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "c_user",
-        "value": "100060948524757",
+        "value": "100071792560006",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.814Z",
-        "lastAccessed": "2026-02-09T20:22:55.814Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "xs",
-        "value": "42%3A0G7KfNrxaw4d5g%3A2%3A1770668545%3A-1%3A-1",
+        "value": "48%3ApiKvm90dHoTTLA%3A2%3A1770682391%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.814Z",
-        "lastAccessed": "2026-02-09T20:22:55.814Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "fr",
-        "value": "00r3XsjPxlLN0GH5v.AWfg9Jqn7RxN3WwubiL5tqzPr7DciQvWD4-GyEWE9Yl0qX872Tw.BpbfZF..AAA.0.0.BpikIF.AWelJ6JsV14mhiRl8817c5JdYzg",
+        "value": "0CWmW6szt52U7i6ov.AWesfcjq7PmHQ7lWQNus81n3ydV2FAeKdqiHkUF0eeYfrCGuts4.Bpinfu..AAA.0.0.Bpinge.AWeAlgrDNPzkB_ePL8njILULcoE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.814Z",
-        "lastAccessed": "2026-02-09T20:22:55.814Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
+    },
+    {
+        "key": "pas",
+        "value": "100079668997780%3AIvPNFBEk0V%2C61552846361150%3A5WQchPQ3He%2C100060948524757%3AwTLFBYZQ79%2C100069518469405%3AfQajVGywcL%2C61550095648862%3AzIAhQkkV5b%2C100071792560006%3Ah6tcIW3CNm",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "fbl_st",
-        "value": "101334517%3BT%3A29511142",
+        "value": "100736073%3BT%3A29511373",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.814Z",
-        "lastAccessed": "2026-02-09T20:22:55.814Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3081%3Btimestamp%3A1770668550",
+        "value": "v2%3Bclient_version%3A3081%3Btimestamp%3A1770682398",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-02-09T20:22:55.814Z",
-        "lastAccessed": "2026-02-09T20:22:55.814Z"
+        "creation": "2026-02-10T00:13:47.842Z",
+        "lastAccessed": "2026-02-10T00:13:47.842Z"
     }
         ]
