--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,13 @@
 {
   "botName": "✅aplin✅",
-  "prefix": ".",
+  "prefix": "/",
   "botpicture": "https://i.ibb.co/Xxmdjjfm/Flux-Dev-cinematic-keyframe13-anime-keyframe12-Animestyle-port-2.jpg",
   "ownerName": "Hridoy",
   "ownerUID": "61586897962846",
   "adminUIDs": [
     "61586897962846",
     "61586897962846",
-    "your_uid_here",
+    "1918878065404794",
     "12"
   ],
   "language": "bn",
